--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
   displayName: Analyze with Inspect
   inputs:
     script: |
-      $(Agent.HomeDirectory)\sl analyze --verbose --no-diagnostic --force --version-id 1 --app ShiftLeftPythonAzWin branch=$(Build.SourceBranchName) --python $(pwd)
+      $(Agent.HomeDirectory)\sl analyze --verbose --no-diagnostic --force --version-id 1 --app ShiftLeftPythonAzWin branch=$(Build.SourceBranchName) --python $(Build.SourcesDirectory)
     workingDirectory: '$(Build.SourcesDirectory)'
   env:
     SHIFTLEFT_ORG_ID: $(SHIFTLEFT_ORG_ID)
