--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,10 +16,18 @@ steps:
     script: |
       Invoke-WebRequest -Uri 'https://cdn.shiftleft.io/download/sl-latest-windows-x64.zip' -OutFile $(Agent.HomeDirectory)\sl.zip
       Expand-Archive -Path $(Agent.HomeDirectory)\sl.zip -DestinationPath $(Agent.HomeDirectory)\
+- task: PowerShell@2
+  displayName: Enable linux containers
+  inputs:
+    targetType: 'inline'
+    script: |
+      '{"experimental":true}' | Out-File "$Env:ProgramData\docker\config\daemon.json " -encoding ASCII
+      Restart-Service docker
 - task: CmdLine@2
   displayName: Analyze with Inspect
   inputs:
     script: |
+      docker pull --platform linux docker.io/shiftleft/scan-slim
       $(Agent.HomeDirectory)\sl analyze --verbose --no-diagnostic --force --version-id 1 --app ShiftLeftPythonAzWin branch=$(Build.SourceBranchName) --python $(Build.SourcesDirectory)
     workingDirectory: '$(Build.SourcesDirectory)'
   env:
