Enable linux docker

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,3 +36,5 @@ steps:
     SHIFTLEFT_ORG_ID: $(SHIFTLEFT_ORG_ID)
     SHIFTLEFT_ACCESS_TOKEN: $(SHIFTLEFT_ACCESS_TOKEN)
     SHIFTLEFT_API_TOKEN: $(SHIFTLEFT_API_TOKEN)
+    LCOW_SUPPORTED: 1
+    LCOW_API_PLATFORM_IF_OMITTED: linux
