--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
+      Install-WindowsFeature -Name Hyper-V -Restart
       Invoke-WebRequest -Uri https://github.com/linuxkit/lcow/releases/download/v4.14.35-v0.3.9/release.zip -OutFile release.zip
       Expand-Archive release.zip -DestinationPath "$Env:ProgramFiles\Linux Containers\."
       '{"experimental":true}' | Out-File "$Env:ProgramData\docker\config\daemon.json " -encoding ASCII
