--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ steps:
   displayName: Analyze with Inspect
   inputs:
     script: |      
-      sl scan --verbose --no-diagnostic --force --version-id 1 --app ShiftLeftPythonAz branch=$(Build.SourceBranchName) --python $(Build.SourcesDirectory)
+      sl scan --verbose --no-diagnostic --force --app ShiftLeftPythonAz branch=$(Build.SourceBranchName) --python $(Build.SourcesDirectory)
     workingDirectory: '$(Build.SourcesDirectory)'
   env:
     SHIFTLEFT_ORG_ID: $(SHIFTLEFT_ORG_ID)
