--- a/.github/workflows/shiftleft-inspect.yml
+++ b/.github/workflows/shiftleft-inspect.yml
@@ -24,7 +24,7 @@ jobs:
         curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
 
     - name: Analyze with Inspect
-      run: ${GITHUB_WORKSPACE}/sl analyze --verbose --no-diagnostic --force --version-id 1 --app ShiftLeftPython --tag branch=${GITHUB_REF} --python $(pwd)
+      run: ${GITHUB_WORKSPACE}/sl analyze --no-diagnostic --force --version-id 1 --app ShiftLeftPython --tag branch=${GITHUB_REF} --python $(pwd)
       env:
         SHIFTLEFT_ORG_ID: ${{ secrets.SHIFTLEFT_ORG_ID }}
         SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
