--- a/.github/workflows/shiftleft-inspect.yml
+++ b/.github/workflows/shiftleft-inspect.yml
@@ -20,19 +20,8 @@ jobs:
       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       id: extract_branch
     - name: NextGen Static Analysis
-      run: ${GITHUB_WORKSPACE}/sl analyze --wait --app shiftleft-python-example --tag branch=${{ github.head_ref || steps.extract_branch.outputs.branch }} --python .
-      env:
-        SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
-  Build-Rules: 
-    runs-on: ubuntu-latest
-    needs: NextGen-Static-Analysis
-    steps:
-    - uses: actions/checkout@v2
-    - name: Download ShiftLeft CLI
       run: |
-        curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
-    - name: Validate Build Rules
-      run: ${GITHUB_WORKSPACE}/sl check-analysis --app shiftleft-python-example --branch "${{ github.head_ref || steps.extract_branch.outputs.branch }}" --report --github-pr-number=${{github.event.number}} --github-pr-user=${{ github.repository_owner }} --github-pr-repo=${{ github.event.repository.name }}  --github-token=${{ secrets.GITHUB_TOKEN }}
+        ${GITHUB_WORKSPACE}/sl analyze --wait --app import_test --tag app.group=SLPy --tag branch=${{ github.head_ref || steps.extract_branch.outputs.branch }} --python $(pwd)/import_test
+        ${GITHUB_WORKSPACE}/sl analyze --wait --app vulnerable_code --tag app.group=SLPy --tag branch=${{ github.head_ref || steps.extract_branch.outputs.branch }} --python $(pwd)/vulnerable_code
       env:
         SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
-  
