--- a/.github/workflows/shiftleft-inspect.yml
+++ b/.github/workflows/shiftleft-inspect.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   NextGen-Static-Analysis:
     runs-on: ubuntu-20.04
+    container: 
+      image: alpine:3
     steps:
     - uses: actions/checkout@v2
     - name: Download ShiftLeft CLI
