--- a/.github/workflows/shiftleft-inspect.yml
+++ b/.github/workflows/shiftleft-inspect.yml
@@ -11,7 +11,7 @@ jobs:
   NextGen-Static-Analysis:
     runs-on: ubuntu-20.04
     container: 
-      image: alpine:3
+      image: python:3.8-alpine
     steps:
     - uses: actions/checkout@v2
     - name: Download ShiftLeft CLI
@@ -27,6 +27,7 @@ jobs:
         SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
   Build-Rules: 
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'pull_request' }}
     needs: NextGen-Static-Analysis
     steps:
     - uses: actions/checkout@v2
@@ -37,4 +38,4 @@ jobs:
       run: ${GITHUB_WORKSPACE}/sl check-analysis --app shiftleft-python-example --branch "${{ github.head_ref || steps.extract_branch.outputs.branch }}" --report --github-pr-number=${{github.event.number}} --github-pr-user=${{ github.repository_owner }} --github-pr-repo=${{ github.event.repository.name }}  --github-token=${{ secrets.GITHUB_TOKEN }}
       env:
         SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
-  
+ 
